# jazz-improvisation-mcp

./: README.md  __init__.py  pyproject.toml  setup.py
jazz_improvisation_mcp/: categorical_structure.yaml  enhancer.py  intentionality_reasoning.yaml  olog_loader.py  server.py
tests/: __init__.py  test_jazz_improvisation.py
